
(coq.theory
	(name CoqR)
	(package CoqR)
	(theories Lib)
	(flags -w -notation-overridden)
	(libraries coq.plugins.extraction))

;(include_subdirs qualified)

;(coq.extraction
;	(prelude Extraction)
;	(extracted_modules extract))

(rule
	(targets "extract.ml" "extract.mli")
	(deps "Extraction.vo")
	(action (progn)))

(rule
	(targets "funlist.ml")
	(deps "extract.mli" "gen-funlist.pl")
	(action
		(run ./gen-funlist.pl)))

(menhir
	(modules parser)
	(flags --explain))

(executable
	(name runR)
	(modes (best exe)))

(install
	(package runR)
	(section bin)
	(files (runR.exe as runR)))

